--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 var channel = 'my-draw-demo';
 
  var PUBNUB_demo = PUBNUB.init({
-    publish_key: 'pub-c-b0111032-2103-4c52-a628-037979ab2842',
-    subscribe_key: 'sub-c-298a1dac-0955-11e6-bbd9-02ee2ddab7fe'
+    publish_key: 'pub-c-156a6d5f-22bd-4a13-848d-b5b4d4b36695',
+    subscribe_key: 'sub-c-f762fb78-2724-11e4-a4df-02ee2ddab7fe'
   });
 pubnub.subscribe({
     channel: channel,
@@ -15,10 +15,17 @@ pubnub.subscribe({
 
 
   	// Add presence
-  	presence: function(m){
+  	presence: function(m){if(m.occupancy > 1){
+        document.getElementById('unit').textContent = 'doodlers';
+      }
     document.getElementById('occupancy').textContent = m.occupancy;
   }
 });
+  function publish(data) {
+    pubnub.publish({
+      channel: channel,
+      message: data
+    });
 </script>
 
 <canvas id="drawCanvas" width="800" height="600"></canvas>
