--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <canvas id="drawCanvas" width="800" height="600"></canvas>
-<script src="http://cdn.pubnub.com/pubnub.min.js"></script>
+<script src="//cdn.pubnub.com/pubnub-3.14.1.min.js"></script>
 <script type="text/javascript">
 /* PubNub */
 
