--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <canvas id="drawCanvas" width="800" height="600"></canvas>
-<script src="//cdn.pubnub.com/pubnub-3.14.1.min.js"></script>
+<script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
 <script type="text/javascript">
 /* PubNub */
 
 var channel = 'draw';
 
-var pubnub = PUBNUB.init({
+var PUBNUB_demo = PUBNUB.init({
     publish_key: 'pub-c-156a6d5f-22bd-4a13-848d-b5b4d4b36695',
     subscribe_key: 'sub-c-f762fb78-2724-11e4-a4df-02ee2ddab7fe',
 });
