--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@ pubnub.subscribe({
 var canvas = document.getElementById('drawCanvas');
 var ctx = canvas.getContext('2d');
    
+canvas.width = Math.min(document.documentElement.clientWidth, window.innerWidth || 300);
+canvas.height = Math.min(document.documentElement.clientHeight, window.innerHeight || 300);
+
 ctx.lineWidth = '3';
 ctx.lineCap = 'round';
 ctx.lineJoin = 'round';
@@ -34,12 +37,12 @@ ctx.lineJoin = 'round';
 var color = 'yellowgreen';
 
 var isTouchSupported = 'ontouchstart' in window;
-  var isPointerSupported = navigator.pointerEnabled;
-  var isMSPointerSupported =  navigator.msPointerEnabled;
+var isPointerSupported = navigator.pointerEnabled;
+var isMSPointerSupported =  navigator.msPointerEnabled;
   
-  var downEvent = isTouchSupported ? 'touchstart' : (isPointerSupported ? 'pointerdown' : (isMSPointerSupported ? 'MSPointerDown' : 'mousedown'));
-  var moveEvent = isTouchSupported ? 'touchmove' : (isPointerSupported ? 'pointermove' : (isMSPointerSupported ? 'MSPointerMove' : 'mousemove'));
-  var upEvent = isTouchSupported ? 'touchend' : (isPointerSupported ? 'pointerup' : (isMSPointerSupported ? 'MSPointerUp' : 'mouseup'));
+var downEvent = isTouchSupported ? 'touchstart' : (isPointerSupported ? 'pointerdown' : (isMSPointerSupported ? 'MSPointerDown' : 'mousedown'));
+var moveEvent = isTouchSupported ? 'touchmove' : (isPointerSupported ? 'pointermove' : (isMSPointerSupported ? 'MSPointerMove' : 'mousemove'));
+var upEvent = isTouchSupported ? 'touchend' : (isPointerSupported ? 'pointerup' : (isMSPointerSupported ? 'MSPointerUp' : 'mouseup'));
       
   canvas.addEventListener(downEvent, startDraw, false);
   canvas.addEventListener(moveEvent, draw, false);
