--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ var isActive = false;
 var plots = [];
 
 function draw(e) {
+  if (e.target == canvas) {
+    e.preventDefault();
+  }
   if(!isActive) return;
 
   var x = e.offsetX || e.layerX - canvas.offsetLeft;
@@ -78,10 +81,17 @@ function draw(e) {
 }
   
 function startDraw(e) {
+  if (e.target == canvas) {
+    e.preventDefault();
+  }
   isActive = true;
+
 }
   
 function endDraw(e) {
+  if (e.target == canvas) {
+    e.preventDefault();
+  }
   isActive = false;
   
   pubnub.publish({
