added checklist of what we need to do

--- a/index.html
+++ b/index.html
@@ -107,4 +107,10 @@ function endDraw(e) {
 
 
 </script>
+shmancying it up:
+1. color picker (for pen and background)
+2. adding images
+3. add ability to type
+4. add brushes http://perfectionkills.com/exploring-canvas-drawing-techniques/
+5. adjusting thickness of brush
 </html>
