--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>canvas 2.0</title>
+    <style>
 
+        canvas {
+            background: #c4c9cc;
+
+        }
+    </style>
+</head>
+
+<body>
 <canvas id="drawCanvas" width="800" height="600"></canvas>
 <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
 <script type="text/javascript">
@@ -126,4 +139,5 @@ shmancying it up:
 3. add ability to type
 4. add brushes http://perfectionkills.com/exploring-canvas-drawing-techniques/
 5. adjusting thickness of brush
+</body>
 </html>
