--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<canvas id="drawCanvas" width="800" height="600"></canvas>
+<canvas id="drawCanvas" width="800" height="600"  style="background: url('blueprint.png')"></canvas>
 <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
 <script type="text/javascript">
 /* PubNub */
