added color picker

--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
 
 <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
 <script src="board.js"></script>
+
+<style>
+    #color{position: fixed;
+        top: 0;
+        right: 0;
+        width: 300px;}
+</style>
+<div id = "color">
+    <form>
+    <input type="color-picker" value=""/>
+    <script src="js/color-picker.js"></script>
+    </form>
+</div>
+
 <br>
 shmancying it up:
 1. color picker (for pen and background)
