--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 
 <canvas id="drawCanvas" width="800" height="600" style="background: url('http://thenewcode.com/assets/images/thumbnails/blueprint.png'); 
-/*z-index: =2; position:absolute; top:0; left:0;*/
+z-index: -2; position:absolute; top:0; left:0;
 "></canvas>
 <!-- <input type="button" style="z-index:2; position:absolute; top:10; left:10" value="test"/> -->
 
@@ -53,7 +53,7 @@
 
 <style>
     #color{position: fixed;
-        top: 0;
+        top: 10%;
         right: 0;
         width: 300px;}
 </style>
