--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <li class='active has-sub'><a href='#'><span>Upload</span></a>
       <ul id='Image'>
          <!-- <li value='30'><a href='#'><img src="images/30.png"><span></span></a></li> -->
-         <form>
-           <li><input type="text" id="imageLoader" name="imageLoader"/>
-          <button onclick="uploadImage(imgURL())">Upload</button></li>
-         </form>
+         <li><form>
+           <input type="text" id="imageLoader" name="imageLoader"/>
+          <button type="button" onclick="uploadImage(imgURL())">Upload</button>
+         </form></li>
       </ul>
 
       <li class='active has-sub'><a href='#'><span>Color</span></a>
@@ -42,7 +42,6 @@
           </a></li>
       </ul>
 </ul>
- 
 </div>
 
 
@@ -84,11 +83,11 @@ z-index: -2; position:absolute; top:0; left:0;
 
 
 <br>
-shmancying it up:
+<!-- shmancying it up:
 1. color picker (for pen and background)
 2. adding images
 3. add ability to type
 4. add brushes http://perfectionkills.com/exploring-canvas-drawing-techniques/
-5. adjusting thickness of brush
+5. adjusting thickness of brush -->
 </body>
 </html>
