minor fixes and alignments

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <li class='active has-sub'><a href='#'><span>Upload</span></a>
       <ul id='Image'>
          <!-- <li value='30'><a href='#'><img src="images/30.png"><span></span></a></li> -->
-         <li><form>
+         <li><a href="#"><form>
            <input type="text" id="imageLoader" name="imageLoader"/>
           <button type="button" onclick="uploadImage(imgURL())">Upload</button>
-         </form></li>
+         </form></a></li>
       </ul>
 
       <li class='active has-sub'><a href='#'><span>Color</span></a>
